# odoo_api_manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
odoo_api_manager/: __init__.py  _base_api_manager.py  _base_extension.py  _env.py  _env_variables.py  _extensions.py  _odoo_api_manager.py  _options.py  _typing.py  _warnings.py  odoo_api_manager.py  typing.py
odoo_api_manager/_constants/: _model_names.py
odoo_api_manager/_core/: _env.py
odoo_api_manager/_errors/: __init__.py
odoo_api_manager/_extensions/: __init__.py  _data_methods.py  _extend_methods.py  _extensions_registry.py
odoo_api_manager/_resources/: _credentials.py
odoo_api_manager/_settings/: _env.py
odoo_api_manager/_templates/: _session.py  _xmlrpc_resources.py
odoo_api_manager/_typing/: __init__.py  _base.py  _collections.py
src/odoo_api_manager/: __init__.py  _main.py  typing.py
src/odoo_api_manager/_constants/: __init__.py  _variable_names.py
src/odoo_api_manager/_core/: __init__.py
src/odoo_api_manager/_errors/: _main.py
src/odoo_api_manager/_resources/: __init__.py  _credentials.py  _params.py
src/odoo_api_manager/_settings/: __init__.py  _presets.py
src/odoo_api_manager/_templates/: __init__.py
src/odoo_api_manager/_typing/: _aliases.py  _criteria_structure.py  _literals.py  aliases.py  callables.py  criteria_structure.py  generics.py  interfaces.py  literals.py  misc.py
src/odoo_api_manager/_typing/_base/: aliases.py  generics.py  literals.py
src/odoo_api_manager/_typing/_interfaces/: many2one.py
src/odoo_api_manager/_typing/_structures/: misc.py  (+2 more)
